crates/cli/tests/snapshots/run_node_test__node__runs_package_managers.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:npm
8.19.0
▪▪▪▪ node:npm (100ms)

Tasks: 1 completed
 Time: 100ms
