crates/cli/tests/snapshots/run_node_test__node__sets_env_vars.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true
▪▪▪▪ node:envVars (100ms)

Tasks: 1 completed
 Time: 100ms
