crates/cli/tests/snapshots/run_node_test__node__supports_top_level_await.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:topLevelAwait
before
awaiting
after
▪▪▪▪ node:topLevelAwait (100ms)

Tasks: 1 completed
 Time: 100ms
